Admin management, user management, code templates

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -81,3 +81,8 @@ div.required label.control-label:after {
 .box-header h2 {    
     font-size: 20px;
 }
+
+.buttons {
+    clear: left;
+    margin-top: 20px;
+}
